@@ -9,6 +9,7 @@ Beta-0.3.0
   * Adding equals to generated classes (RealmObjects)
   * Added utility methods to delete Realm files
   * Enables auto-refresh of read transactions (removed the refresh method)
+  * Throw RealmException if the annotation processor is not run properly
 
   Bug Fixes
   =========
